arm64: pxa1936: sync defconfig for kernel upgrade
Since the kernel upgrade to 3.14.26, need to sync the defconfig

Change-Id: I88f3053ba6aac2946b81bee961940d3836002520
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.14.0-rc7 Kernel Configuration
+# Linux/arm64 3.14.26 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -168,6 +168,7 @@ CONFIG_COMPAT_BRK=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_SLUB_CPU_PARTIAL=y
+# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 CONFIG_JUMP_LABEL=y
@@ -199,7 +200,6 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_MODULES=y
 # CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
@@ -233,6 +233,7 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
+CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
@@ -1958,8 +1959,10 @@ CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 #
 # Camera sensor devices
 #
-# CONFIG_ECS_DRIVER is not set
-# CONFIG_ECS_DRIVER_SUBDEV is not set
+CONFIG_ECS_DRIVER=y
+CONFIG_ECS_DRIVER_SUBDEV=y
+# CONFIG_SOC_CAMERA_OV5640_ECS is not set
+CONFIG_SOC_CAMERA_SP0A20_ECS=y
 
 #
 # Flash devices
@@ -2016,6 +2019,7 @@ CONFIG_B52_CAMERA_OV2680=y
 CONFIG_B52_CAMERA_OV8858=y
 CONFIG_B52_CAMERA_SR544=y
 CONFIG_B52_CAMERA_HI551=y
+# CONFIG_B52_CAMERA_OV5670 is not set
 
 #
 # Tools to develop new frontends
@@ -2076,6 +2080,7 @@ CONFIG_MMP_PANEL_OTM8018B=y
 CONFIG_MMP_PANEL_OTM1283A=y
 CONFIG_MMP_PANEL_TD043MGEA1=y
 CONFIG_MMP_PANEL_HX8394=y
+# CONFIG_MMP_PANEL_FL10802 is not set
 # CONFIG_MMP_PANEL_JD9365 is not set
 # CONFIG_MMP_PANEL_JD9161_HSD5 is not set
 # CONFIG_MMP_PANEL_OTM1284 is not set
