--- a/drivers/staging/android/Makefile
+++ b/drivers/staging/android/Makefile
@@ -12,3 +12,4 @@ obj-$(CONFIG_ANDROID_LOW_MEMORY_KILLER)	+= lowmemorykiller.o
 obj-$(CONFIG_ANDROID_INTF_ALARM_DEV)	+= alarm-dev.o alarm-poweroff.o
 obj-$(CONFIG_SYNC)			+= sync.o
 obj-$(CONFIG_SW_SYNC)			+= sw_sync.o
+obj-$(CONFIG_RUNTIME_COMPCACHE) += rtcc.o
