--- a/arch/arm64/boot/dts/88pm880.dtsi
+++ b/arch/arm64/boot/dts/88pm880.dtsi
@@ -11,52 +11,52 @@
 &pmic0 {
 	compatible = "marvell,88pm880";
 	/* ---buck--- */
-	vccmain: regulator-buck1a {
+	buck1a: regulator-buck1a {
 		compatible = "marvell,88pm880-buck1a";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <1800000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
 	buck2: regulator-buck2 {
 		compatible = "marvell,88pm880-buck2";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
 	vddr: regulator-buck3 {
 		compatible = "marvell,88pm880-buck3";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
 	buck4: regulator-buck4 {
 		compatible = "marvell,88pm880-buck4";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
 	buck5: regulator-buck5 {
 		compatible = "marvell,88pm880-buck5";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
 	buck6: regulator-buck6 {
 		compatible = "marvell,88pm880-buck6";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
 	buck7: regulator-buck7 {
 		compatible = "marvell,88pm880-buck7";
 		regulator-min-microvolt = <600000>;
-		regulator-max-microvolt = <912500>;
+		regulator-max-microvolt = <3300000>;
 		regulator-always-on;
 		regulator-boot-on;
 	};
@@ -140,7 +140,7 @@
 	ldo16: regulator-ldo16 {
 		compatible = "marvell,88pm880-ldo16";
 		regulator-min-microvolt = <1700000>;
-		regulator-max-microvolt = <2800000>;
+		regulator-max-microvolt = <3300000>;
 	};
 	ldo17: regulator-ldo17 {
 		compatible = "marvell,88pm880-ldo17";
