--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -17,60 +17,23 @@
 			twsi2: i2c@d4037000 {
 				status = "okay";
 
-				pmic0: 88pm860@30 {
+				pmic0: 88pm880@30 {
 					reg = <0x30>;
 					interrupts = <0 4 IRQ_TYPE_LEVEL_HIGH>;
 					interrupt-parent = <&gic>;
-
-					onkey {
-						onkey-gpio-number = <0>;
-						/* hardware reset: just reset */
-						hw-rst-type = <1>;
-						/* long onkey: power down */
-						long-onkey-type = <1>;
-					};
-
-					vbus {
-						vbus-gpio = <0xff>;
-						id-gpadc = <2>;
-					};
 
 					dvc {
 						pinctrl-names = "default";
 						pinctrl-0 = <&dvc_pmx_func>;
 					};
-				};
 
-				pmic1: 88pm830@68 {
-					/* gpio 4, 19, 124 */
-					pinctrl-names = "default","sleep";
-					pinctrl-0 = <&pmic1_pins>;
-					pinctrl-1 = <&pmic1_pins_sleep>;
-
-					reg = <0x68>;
-					interrupt-parent = <&gpio>;
-					interrupts = <4 IRQ_TYPE_EDGE_FALLING>;
-					edge-wakeup-gpio = <4>;
-
-					/* this is a temporary solution, only need vbus driver */
-				        charger {
-				        };
-				        battery {
-						marvell,fg-has-external-storage;
-						external-storage = <&pmic0>;
-						external-resistor = <200>; /* mohm */
-				        };
-				        led {
-					        flash-en-gpio = <124>;
-					        flash-txmsk-gpio = <19>;
-						status = "okay";
-				        };
-					vbus {
-						status = "okay";
+					/*
+					 * TODO: remove later, fake ldo,
+					 * to pass compile
+					 */
+					ldo19: regulator-ldo19 {
 					};
-				        debug {
-				        };
-			       };
+				};
 
 				pmic2: 88pm860@38 {
 					compatible = "marvell,88pm860";
@@ -90,11 +53,10 @@
 			};
 		};
 	};
-
 };
 
-#include "88pm860.dtsi"
-#include "88pm860_pxa1936_dkb.dtsi"
-#include "88pm830.dtsi"
-#include "88pm830_battery_common.dtsi"
-#include "88pm830_sp4555557sa.dtsi"
+#include "88pm88x.dtsi"
+#include "88pm880.dtsi"
+#include "88pm88x_battery_common.dtsi"
+#include "88pm88x_sp4555557sa.dtsi"
+#include "88pm880_pxa1936_dkb.dtsi"
