--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1352,6 +1352,7 @@ CONFIG_TOUCHSCREEN_MSG2133=y
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_88PM80X_ONKEY=y
+CONFIG_INPUT_88PM88X_ONKEY=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
 # CONFIG_INPUT_MMA8450 is not set
@@ -1443,6 +1444,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_VIBRATOR_88PM80X is not set
 CONFIG_VBUS_88PM80X=y
 CONFIG_VBUS_88PM830=y
+CONFIG_VBUS_88PM88X=y
 CONFIG_PXA9XX_AMIPC=y
 CONFIG_VIBRATOR_PWM=y
 CONFIG_PXA9XX_ACIPC=y
@@ -1594,6 +1596,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_TEST_POWER is not set
 CONFIG_SW_BATTERY_88PM80X=y
 CONFIG_BATTERY_88PM830=y
+CONFIG_BATTERY_88PM88X=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
@@ -1601,6 +1604,7 @@ CONFIG_BATTERY_88PM830=y
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
+CONFIG_CHARGER_88PM88X=y
 # CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
 CONFIG_CHARGER_88PM830=y
@@ -1805,7 +1809,7 @@ CONFIG_MFD_88PM860=y
 CONFIG_MFD_88PM830=y
 # CONFIG_MFD_88PM860X is not set
 CONFIG_MFD_MMP_MAP=y
-# CONFIG_MFD_88PM88X is not set
+CONFIG_MFD_88PM88X=y
 # CONFIG_MFD_MAX14577 is not set
 # CONFIG_MFD_MAX77686 is not set
 # CONFIG_MFD_MAX77693 is not set
@@ -1857,6 +1861,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
 CONFIG_REGULATOR_88PM800=y
+CONFIG_REGULATOR_88PM88X=y
 # CONFIG_REGULATOR_ACT8865 is not set
 # CONFIG_REGULATOR_AD5398 is not set
 # CONFIG_REGULATOR_DA9210 is not set
@@ -2163,6 +2168,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_MMP_MAP_FE_DAI=y
 CONFIG_SND_SOC_88PM860=y
 CONFIG_SND_SOC_88PM800_HS=y
+# CONFIG_SND_SOC_88PM88X_HS is not set
 # CONFIG_DUAL_SPEAKER is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
@@ -2473,6 +2479,8 @@ CONFIG_LEDS_CLASS=y
 # LED drivers
 #
 CONFIG_LEDS_88PM830=y
+CONFIG_LEDS_88PM88X_RGB=y
+CONFIG_LEDS_88PM88X_CFD=y
 # CONFIG_LEDS_LM3530 is not set
 CONFIG_LEDS_LM3532=y
 # CONFIG_LEDS_LM3642 is not set
@@ -2536,6 +2544,7 @@ CONFIG_RTC_INTF_DEV=y
 # I2C RTC drivers
 #
 CONFIG_RTC_DRV_88PM80X=y
+# CONFIG_RTC_DRV_88PM88X is not set
 # CONFIG_RTC_DRV_DS1307 is not set
 # CONFIG_RTC_DRV_DS1374 is not set
 # CONFIG_RTC_DRV_DS1672 is not set
@@ -2762,6 +2771,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MCP3422 is not set
 # CONFIG_NAU7802 is not set
 # CONFIG_TI_ADC081C is not set
+CONFIG_88PM88X_GPADC=y
 
 #
 # Amplifiers
