arm64: pxa1936: enable HS200 on helan3
This patch enable HS200 on helan3 for better IO performance

Change-Id: I4bc4d63f011a7d3ffef58fac561d668d9997f301
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -255,7 +255,7 @@
 						)>;
 				marvell,sdh-quirks2 = <(
 						SDHCI_QUIRK2_TUNING_ADMA_BROKEN |
-						SDHCI_QUIRK2_BROKEN_HS200 |
+						/* SDHCI_QUIRK2_BROKEN_HS200 | */
 						SDHCI_QUIRK2_TIMEOUT_SHORT
 						)>;
 				marvell,sdh-host-caps = <(MMC_CAP_1_8V_DDR)>;
