sensor: memsic: add memsic sensors code in kenel314 system
add memsic sensors code in kernel314 system. It includes mxc400x accelerometer,
mmc3524 orientation and mmc3524 magnetic sensors.

Change-Id: I8d5fde1457f001f4860b6eea427d04cbaf19c029
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1530,6 +1530,13 @@ config SENSORS_WM8350
 	  This driver can also be built as a module.  If so, the module
 	  will be called wm8350-hwmon.
 
+config SENSORS_MMX3524X_MXC400X
+	tristate "Memsic MMX3524X mag sensor and MXC400X accel sensor"
+	depends on I2C && INPUT
+	help
+	This driver provides the support of MMX3524X and MXC400X deivce.If
+	you say yes here, you will get this support both MMX3524X and MXC400X.
+
 config SENSORS_ULTRA45
 	tristate "Sun Ultra45 PIC16F747"
 	depends on SPARC64
