--- a/drivers/hwmon/Makefile
+++ b/drivers/hwmon/Makefile
@@ -159,6 +159,6 @@ obj-$(CONFIG_PMBUS)		+= pmbus/
 obj-y				+= bmi160/
 
 obj-y				+= bme280/
-
+obj-$(CONFIG_SENSORS_MMX3524X_MXC400X)	+= memsic/mxc400x.o memsic/ptaccs.o memsic/mmc3524x.o memsic/mecs.o
 ccflags-$(CONFIG_HWMON_DEBUG_CHIP) := -DDEBUG
 
