arm64: dts: add the device tree for memsic sensor on 1936dkb
add the device tree for memsic sensor on pxa1936 dkb,It includes
mxc400x accelerometer,mmc3524 orientation and mmc3524 magnetic sensors.

Change-Id: I72dc78e00309b59d228bf3cc5caa551589cc172d
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -943,6 +943,16 @@
 						inven,secondary_name = "ak09912";
 						inven,secondary_reg = <0x0D>;
 				};
+				sensor5: mxc400x@15 {
+					compatible = "memsic,mxc400x";
+					reg = <0x15>;
+					avdd-supply = <&ldo18>;
+				};
+				sensor6: mmc3524x@30 {
+					compatible = "memsic,mmc3524x";
+					reg = <0x30>;
+					avdd-supply = <&ldo18>;
+				};
 			};
 
 			/* SSPA port 0 */
