arm64: pxa1936: enable memsic sensors
enable memsic senosrs on pxa1936 dkb.It includes
mxc400x accelerometer,mmc3524 orientation and mmc3524 magnetic sensors.

Change-Id: I6affff1f18450d272bd68e36e1b50cbb3f9d31aa
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1744,6 +1744,7 @@ CONFIG_SENSORS_BME280_I2C=y
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
 # CONFIG_SENSORS_ISL29043 is not set
+CONFIG_SENSORS_MMX3524X_MXC400X=y
 # CONFIG_SENSORS_LPS331AP is not set
 # CONFIG_SENSORS_BMP18X is not set
 CONFIG_SENSORS_APDS9930=y
