arm64: dts: add labels to 88pm880 pmic dtsi
added additional labels for pmic 88pm880 dtsi.
this is required since this properties are used under different labels
in several platforms

Change-Id: I6d55e8a7b2b5d8736ec6ff28cc026ee75b80f945
Signed-off-by: Yoav Gvili <ygvili@marvell.com>

--- a/arch/arm64/boot/dts/88pm880.dtsi
+++ b/arch/arm64/boot/dts/88pm880.dtsi
@@ -32,6 +32,8 @@
 		regulator-always-on;
 		regulator-boot-on;
 	};
+	buck3: regulator-buck3 { /* alias label for buck3 */
+	};
 	buck4: regulator-buck4 {
 		compatible = "marvell,88pm880-buck4";
 		regulator-min-microvolt = <600000>;
