--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -354,6 +354,7 @@
                         debug: debug@d42a0000 {
 				compatible = "marvell,mmp-debug";
 				reg = <0xd42a0000 0x800>;
+				version = <2>;
 			};
 
 			ccic1: ccic@d420a000 {
