--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -405,6 +405,7 @@
                         debug: debug@d42a0000 {
 				compatible = "marvell,mmp-debug";
 				reg = <0xd42a0000 0x800>;
+				version = <1>;
 			};
 
 			ccic1: ccic@d420a000 {
