arm64: dts: Add interrupt mode for axi timeout
Add interrupt mode for axi timeout.

Change-Id: I4e49a6cbf68d9df362ffcfe91c9dca744afc2a11
Signed-off-by: Fangsuo Wu <fswu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -351,10 +351,18 @@
 				status = "disabled";
 			};
 
-                        debug: debug@d42a0000 {
+			debug: debug@d42a0000 {
 				compatible = "marvell,mmp-debug";
 				reg = <0xd42a0000 0x800>;
 				version = <2>;
+				interrupts = <0 62 0x4>;
+				/*
+				 * 0x0: No mode enabled
+				 * 0x1: Enable interrupt mode
+				 * 0x2: Enable data abort mode
+				 * 0x3: Enable interrupt and data abort modes;
+				 */
+				detection_modes = <0x3>;
 			};
 
 			ccic1: ccic@d420a000 {
