arm64: dts: add 445457PLG battery support
pxa1908FF uses battery of BP479, cell info 445457PLG.

Change-Id: I7c8e572b34591c2ca99e7e26fbf6daa368fb8f12
Signed-off-by: Andy Luo <yifeiluo@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-ff.dts
+++ b/arch/arm64/boot/dts/pxa1908-ff.dts
@@ -252,5 +252,5 @@
 #include "88pm88x.dtsi"
 #include "88pm886.dtsi"
 #include "88pm88x_battery_common.dtsi"
-#include "88pm88x_sp4555557sa.dtsi"
+#include "88pm88x_445457plg.dtsi"
 #include "88pm886_pxa1908_dkb.dtsi"
