arch: arm64: enable ov13850R2A 13M sensor for helan3
enable ov13850 13M sensor for helan3

Change-Id: If0bdf2db4826409dea9a7ed5ed5669ecfa2cabe0
Signed-off-by: Chunlin Hu <huchl@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2026,6 +2026,7 @@ CONFIG_SOC_CAMERA_SR200=y
 #
 CONFIG_B52_CAMERA_OV13850=y
 CONFIG_B52_CAMERA_OV13850_13M=y
+CONFIG_B52_CAMERA_OV13850R2A=y
 CONFIG_B52_CAMERA_IMX219=y
 CONFIG_B52_CAMERA_OV5648=y
 CONFIG_B52_CAMERA_OV2680=y
