thermal: add voltage control policy for thermal driver
use vl(voltage level) for thermal policy control
add voltage_mrvl.c and voltage_mrvl.h.
use helan3 to separate different chip.

Change-Id: I1f23d5161fa8e2d646ee6e8fb6a89fa33787c153
Signed-off-by: Liang Chen <chl@marvell.com>

--- a/drivers/thermal/Makefile
+++ b/drivers/thermal/Makefile
@@ -19,6 +19,7 @@ thermal_sys-$(CONFIG_THERMAL_GOV_BI_DIRECTION)	+= bi_direction.o
 thermal_sys-$(CONFIG_CPU_THERMAL)	+= cpu_cooling.o
 # mrvl cooling devices
 thermal_sys-$(CONFIG_COOLING_DEV_MRVL)	+= cooling_dev_mrvl.o
+thermal_sys-$(CONFIG_COOLING_DEV_MRVL)  += voltage_mrvl.o
 
 # platform thermal drivers
 obj-$(CONFIG_SPEAR_THERMAL)	+= spear_thermal.o
