--- a/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
@@ -12,7 +12,12 @@
 	 * board specific register configuration
 	 * marvell,pmic-board-cfg = <page reg mask data>;
 	 */
-	marvell,pmic-board-cfg = <>;
+	/* disable ldo 5 ~ 8, 10 ~ 14, 17, 19, 20 in sleep mode */
+	marvell,pmic-board-cfg =
+			      <0x1 0x5d 0xff 0x0>,
+			      <0x1 0x5e 0xfc 0x0>,
+			      <0x1 0x5f 0x0f 0x0>,
+			      <0x1 0x60 0xf3 0x0>;
 
 	regulators {
 		buck1a: BUCK1A {regulator-boot-on;regulator-always-on;};
@@ -24,13 +29,13 @@
 
 		ldo1: LDO1 {regulator-boot-on;regulator-always-on;};
 		ldo2: LDO2 {regulator-boot-on;regulator-always-on;};
-		ldo3: LDO3 {regulator-boot-on;regulator-always-on;};
+		ldo3: LDO3 {regulator-boot-on;};
 		ldo4: LDO4 {regulator-boot-on;regulator-always-on;};
 		ldo5: LDO5 {regulator-boot-on;};
 		ldo6: LDO6 {regulator-boot-on;regulator-always-on;};
 		ldo7: LDO7 {regulator-boot-on;regulator-always-on;};
 		ldo8: LDO8 {regulator-boot-on;regulator-always-on;};
-		ldo9: LDO9 {regulator-boot-on;regulator-always-on;};
+		ldo9: LDO9 {regulator-boot-on;};
 		ldo10: LDO10 {regulator-boot-on;regulator-always-on;};
 		ldo11: LDO11 {regulator-boot-on;regulator-always-on;};
 		ldo12: LDO12 {regulator-boot-on;regulator-always-on;};
@@ -39,7 +44,7 @@
 		ldo15: LDO15 {regulator-boot-on;regulator-always-on;};
 		ldo16: LDO16 {regulator-boot-on;regulator-always-on;};
 		ldo17: LDO17 {regulator-boot-on;};
-		ldo18: LDO18 {regulator-boot-on;regulator-always-on;};
+		ldo18: LDO18 {regulator-boot-on;};
 		ldo19: LDO19 {regulator-boot-on;};
 	};
 
