arm64: pxa1936: make CA53 cache erreta to be selected by default
The erreta 826319, 827319 and 824069 are needed by pxa1908 which is r0p2.
We enabled them by default in defconfig

Change-Id: Iede50fe258258ba3d7dbc82df27425225f1651f2
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.14.26 Kernel Configuration
+# Linux/arm64 3.14.27 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -252,6 +252,13 @@ CONFIG_ARM_AMBA=y
 #
 # Kernel Features
 #
+
+#
+# ARM errata workarounds via the alternatives framework
+#
+CONFIG_ARM64_ERRATUM_826319=y
+CONFIG_ARM64_ERRATUM_827319=y
+CONFIG_ARM64_ERRATUM_824069=y
 # CONFIG_ARM64_64K_PAGES is not set
 # CONFIG_CPU_BIG_ENDIAN is not set
 CONFIG_SMP=y
