arm64: pxa1936: refine external sdcard ldo setting
Current code set the Ldo5 and Ldo17 as always on regulator.
That will cause power leakage.

So remove the always on setting on 88pm860_1936.dtsi.

Change-Id: I89bd995fb31d8b31efc6bd3f700a96ca239ce768
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
@@ -26,7 +26,7 @@
 		ldo2: LDO2 {regulator-boot-on;regulator-always-on;};
 		ldo3: LDO3 {regulator-boot-on;regulator-always-on;};
 		ldo4: LDO4 {regulator-boot-on;regulator-always-on;};
-		ldo5: LDO5 {regulator-boot-on;regulator-always-on;};
+		ldo5: LDO5 {regulator-boot-on;};
 		ldo6: LDO6 {regulator-boot-on;regulator-always-on;};
 		ldo7: LDO7 {regulator-boot-on;regulator-always-on;};
 		ldo8: LDO8 {regulator-boot-on;regulator-always-on;};
@@ -38,7 +38,7 @@
 		ldo14: LDO14 {regulator-boot-on;regulator-always-on;};
 		ldo15: LDO15 {regulator-boot-on;regulator-always-on;};
 		ldo16: LDO16 {regulator-boot-on;regulator-always-on;};
-		ldo17: LDO17 {regulator-boot-on;regulator-always-on;};
+		ldo17: LDO17 {regulator-boot-on;};
 		ldo18: LDO18 {regulator-boot-on;regulator-always-on;};
 		ldo19: LDO19 {regulator-boot-on;};
 	};
