arm64: dts: remove pll4 clk src from LCD on 1936dkb.
LCD will share the same clk src with DDR667,
If we enable DDR667, there is something wrong to light LCD on.
So remove pll4 from LCD clk src.

Change-Id: Ib38e390a0404eb524ef083cf7683d5dadc1c71f7
Signed-off-by: Wenbing Wang <wangwb@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -203,9 +203,8 @@
 				marvell,disp-name = "disp_name";
 				marvell,path-num = <1>;
 				marvell,power-domain = <&pd_display>;
-				clocks = <&soc_clocks PXA1936_CLK_DISP1>,
-					<&soc_clocks PXA1936_CLK_DISP4>;
-				clock-names = "disp1_clk", "dsipll_clk";
+				clocks = <&soc_clocks PXA1936_CLK_DISP1>;
+				clock-names = "disp1_clk";
 				status = "okay";
 				path1 {
 					marvell,path-name = "mmp_pnpath";
