--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -612,6 +612,7 @@
 				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_DDR>;
 				interrupts = <0 9 0x4>;
 				clocks = <&soc_clocks PXA1U88_CLK_KPC>;
+				status = "disabled";
 			};
 
 			sspa0: sspa@d128dc00 {
