--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -14,6 +14,16 @@
 	compatible = "marvell,pxa1936-dkb", "marvell,pxa1936";
 	soc {
 		apb@d4000000 {
+			twsi1: i2c@d4010800 {
+				touch1: s3202@720p {
+					avdd-supply = <&ldo6>;
+				};
+
+				touch2: s3202@1080p {
+					avdd-supply = <&ldo6>;
+				};
+			};
+
 			twsi2: i2c@d4037000 {
 				status = "okay";
 
