arm64: pxa1936_defconfig: enable 88pm88x headset support
We use the 88pm88x-headset.c to support 88pm880's headset
detection.

Change-Id: Ib5d8e1c52cc9ddef8933e90cb158f99ca32585ff
Signed-off-by: Zhao Ye <zhaoy@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2176,7 +2176,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_MMP_MAP_FE_DAI=y
 CONFIG_SND_SOC_88PM860=y
 CONFIG_SND_SOC_88PM800_HS=y
-# CONFIG_SND_SOC_88PM88X_HS is not set
+CONFIG_SND_SOC_88PM88X_HS=y
 # CONFIG_DUAL_SPEAKER is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
@@ -2687,6 +2687,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
+# CONFIG_RUNTIME_COMPCACHE is not set
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
