clk: mmp: remove useless PLL related clock flags
Remove useless PLL related clock flags for HLTE.
Since clk-pxa1L88.c compile depends on these flags, also remove
the compile of this file and no need to support it anymore.

Change-Id: Idbabe489563568d8ad0f94dcaf5c1f3508a2a97e
Signed-off-by: Zhoujie Wu <zjwu@marvell.com>

--- a/drivers/clk/mmp/Makefile
+++ b/drivers/clk/mmp/Makefile
@@ -8,7 +8,7 @@ ifneq ($(CONFIG_OF),)
 ifeq ($(CONFIG_PXA1936_CLK), y)
 obj-y += clk-core-helan3.o clk-pxa1936.o
 else
-obj-y += clk-core-helanx.o clk-pxa1L88.o clk-pxa1U88.o
+obj-y += clk-core-helanx.o clk-pxa1U88.o
 endif
 obj-y += clk-pxa1928.o clk-core-pxa1928.o
 endif
