arm64: dts: change ldo for helan3 dkb v2.0
config different ldo for different dkb version, and move related
config to board dts.

Change-Id: I8828465b42754955c013665f98077074834d15af
Signed-off-by: Yonghai Huang <huangyh@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -63,6 +63,19 @@
 			};
 		};
 	};
+	panel1: r63311 {
+		rst_gpio = <&gpio 98 0>;
+		power_gpio = <&gpio 96 0>;
+	};
+	panel2: hx8394 {
+		rst_gpio = <&gpio 98 0>;
+		avdd-supply = <&ldo6>;
+	};
+
+	panel3: lg4591 {
+		rst_gpio = <&gpio 98 0>;
+		avdd-supply = <&ldo6>;
+	};
 };
 
 #include "88pm88x.dtsi"
