--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -100,7 +100,20 @@
 			};
 		};
 	};
+	panel1: r63311 {
+		rst_gpio = <&gpio 98 0>;
+		power_gpio = <&gpio 96 0>;
+		bl_gpio = <&gpio 32 0>;
+	};
+	panel2: hx8394 {
+		rst_gpio = <&gpio 98 0>;
+		avdd-supply = <&ldo10>;
+	};
 
+	panel3: lg4591 {
+		rst_gpio = <&gpio 98 0>;
+		avdd-supply = <&ldo10>;
+	};
 };
 
 #include "88pm860.dtsi"
