marvell: telephony: add adaptor char device driver for SSIPC
1. Add adaptor char device driver help samsung s-ril handle handshake,
errorhandling, generate required driver notes for s-ril writing & reading.

2. The device node can by extendly by editing umts_io_devices array without
care more details.

3. Offer ioctl to check msocket sync status (by umts_boot0) & channel status
(by other nodes)

Change-Id: I0aae4071ec3c8e220e37d22ecae5a343854db496
Signed-off-by: Li Wang <wangli@marvell.com>

--- a/drivers/marvell/marvell-telephony/Makefile
+++ b/drivers/marvell/marvell-telephony/Makefile
@@ -27,3 +27,5 @@ obj-$(CONFIG_MRVL_MMP_MODEM) += cidatatty/
 obj-$(CONFIG_MRVL_MMP_MODEM) += cimodemtty/
 
 obj-$(CONFIG_MRVL_MMP_MODEM) += audio_stub/
+
+obj-$(CONFIG_MRVL_MMP_MODEM) += ssipc_misc/
