arm64: dts: refine sdcard ldo setting on helan3
On V10 board, we use ldo17 and ldo5 for sdcard.
On V20 board, we use ldo10 and ldo14 for sdcard.

Change-Id: I226c27d0fc91508b1485de97c654341f76995082
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -99,6 +99,14 @@
 				};
 			};
 		};
+
+		axi@d4200000 {  /* AXI */
+			/* SD card */
+			sdh0: sdh@d4280000 {
+			      vqmmc-supply    = <&ldo17>;
+			      vmmc-supply     = <&ldo5>;
+			};
+		};
 	};
 	panel1: r63311 {
 		rst_gpio = <&gpio 98 0>;
