--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -122,6 +122,167 @@
 		rst_gpio = <&gpio 98 0>;
 		avdd-supply = <&ldo10>;
 	};
+	mcam0:mcam@0 {
+		sc2-i2c-dyn-ctrl;
+		pwdn-gpios = <&gpio 68 0>;
+		reset-gpios = <&gpio 67 0>;
+		/*
+		af_2v8-supply = <&ldo10>;
+		avdd_2v8-supply = <&ldo11>;
+		dovdd_1v8-supply = <&voutsw>;
+		dvdd_1v2-supply = <&ldo12>;
+		*/
+		dphy_val = <0xff1d00 0x00024733 0x04001001>;
+		status = "disable";
+	};
+
+	mcam1:mcam@1 {
+		sc2-i2c-dyn-ctrl;
+		pwdn-gpios = <&gpio 70 0>;
+		reset-gpios = <&gpio 69 0>;
+
+		af_2v8-supply = <&ldo8>;
+		avdd_2v8-supply = <&ldo7>;
+		dovdd_1v8-supply = <&buck2>;
+		dvdd_1v2-supply = <&ldo19>;
+
+		dphy_val = <0xff1d00 0x00024733 0x04001001>;
+		status = "okay";
+	};
+
+	soc-camera@0 {
+		status = "okay";
+	};
+
+	soc-camera@1 {
+		status = "okay";
+	};
+
+	plat_cam {
+		status = "okay";
+		backsensor {
+			compatible = "marvell,backsensor";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			status = "okay";
+
+			OV5642: sensor@0 {
+				compatible = "ovt,ov5642";
+				sensor-name = "ovt,ov5642";
+				reg = <0x3c>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				adapter = <0x1>;
+				status = "okay";
+				mclk = <24000000>;
+				sensor-pos = <1>;
+				dphy3 = <0x1500>;
+				dphy5 = <0xff>;
+				dphy6 = <0x1001>;
+				/*
+				af_2v8-supply = <&ldo10>;
+				avdd_2v8-supply = <&ldo11>;
+				dovdd_1v8-supply = <&voutsw>;
+				dvdd_1v2-supply = <&ldo12>;
+				*/
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
+			};
+			OV13850: sensor@1 {
+				compatible = "ovt,ov13850";
+				status = "okay";
+				reg = <0x10>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <24000000>;
+				dphy3 = <0xff4115>;
+				dphy5 = <0x247ff>;
+				dphy6 = <0x4001001>;
+				af_2v8-supply = <&ldo8>;
+				avdd_2v8-supply = <&ldo7>;
+				dovdd_1v8-supply = <&buck2>;
+				dvdd_1v2-supply = <&ldo19>;
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
+			};
+			SR544: sensor@2 {
+				compatible = "samsung,sr544";
+				status = "okay";
+				reg = <0x28>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <26000000>;
+				dphy3 = <0x1500>;
+				dphy5 = <0xff>;
+				dphy6 = <0x1001>;
+				af_2v8-supply = <&ldo8>;
+				avdd_2v8-supply = <&ldo7>;
+				dovdd_1v8-supply = <&buck2>;
+				dvdd_1v2-supply = <&ldo19>;
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
+			};
+			imx219: sensor@3 {
+				compatible = "sony,imx219";
+				status = "okay";
+				reg = <0x1A>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <26000000>;
+				dphy3 = <0x1500>;
+				dphy5 = <0xff>;
+				dphy6 = <0x1001>;
+				af_2v8-supply = <&ldo8>;
+				avdd_2v8-supply = <&ldo7>;
+				dovdd_1v8-supply = <&buck2>;
+				dvdd_1v2-supply = <&ldo19>;
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
+			};
+			OV13850R2A: sensor@4 {
+				compatible = "ovt,ov13850r2a";
+				status = "okay";
+				reg = <0x10>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <24000000>;
+				dphy3 = <0xff4116>;
+				dphy5 = <0x247ff>;
+				dphy6 = <0x4001001>;
+				af_2v8-supply = <&ldo8>;
+				avdd_2v8-supply = <&ldo7>;
+				dovdd_1v8-supply = <&buck2>;
+				dvdd_1v2-supply = <&ldo19>;
+				pwdn-gpios = <&gpio 68 1>;
+				reset-gpios = <&gpio 67 1>;
+			};
+		};
+	};
+
+	b52isp_sc2_csi0 {
+	        status = "okay";
+	};
+	b52isp_sc2_csi1 {
+	        status = "okay";
+	};
+	b52isp_sc2_dma0 {
+	        status = "okay";
+	};
+	b52isp_sc2_dma1 {
+	        status = "okay";
+	};
 };
 
 #include "88pm860.dtsi"
