arm64: configs: modify defconfig to include drv2604 vibrator
This patch will enable the vibrator for pxa1936FF platform

Change-Id: I73cfe158872610c1a0a189d58f35ec19f57aa930
Signed-off-by: Ohad Sharabi <sohad@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1453,6 +1453,7 @@ CONFIG_VBUS_88PM80X=y
 CONFIG_VBUS_88PM830=y
 CONFIG_VBUS_88PM88X=y
 CONFIG_PXA9XX_AMIPC=y
+CONFIG_VIBRATOR_DRV2604=y
 CONFIG_VIBRATOR_PWM=y
 CONFIG_PXA9XX_ACIPC=y
 # CONFIG_MXDCMMB is not set
