--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2105,6 +2105,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
+CONFIG_BACKLIGHT_LM3532=y
 CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
@@ -2492,7 +2493,7 @@ CONFIG_LEDS_88PM830=y
 CONFIG_LEDS_88PM88X_RGB=y
 CONFIG_LEDS_88PM88X_CFD=y
 # CONFIG_LEDS_LM3530 is not set
-CONFIG_LEDS_LM3532=y
+# CONFIG_LEDS_LM3532 is not set
 # CONFIG_LEDS_LM3642 is not set
 # CONFIG_LEDS_PCA9532 is not set
 # CONFIG_LEDS_GPIO is not set
