ASoC: mmp-map: refine TDM slot static allocation
1) slot assign
   Speaker playback: slot 1, 2.
   HS playback: slot 3, 4.
   Mic record: slot 1,2.
2) add static alloc config.
3) fix build warning.

Change-Id: I8a0cf061abcc5ea2e98fb16ff8bc45385c7417da
Signed-off-by: Leilei Shang <shangll@marvell.com>

--- a/sound/soc/pxa/Kconfig
+++ b/sound/soc/pxa/Kconfig
@@ -260,6 +260,13 @@ config SND_MMP_MAP_DUMP
 	  Currently it dumps audio data from audio buffer in
 	  sram and save it in file under /data/log/audio/.
 
+config SND_TDM_STATIC_ALLOC
+	bool "TDM Slot Static Allocation"
+	depends on SND_MMP_TDM
+	help
+	  Say Y if you want to enable TDM slot static allocation.
+	  Don't choose it if you want to use dynamic allocation.
+
 config SND_SOC_PXA_88PM805
 	bool "SoC Audio support for PXA 88PM805"
 	depends on ARCH_MMP && SND && MFD_88PM805
