arm64: pxa1936: select CONFIG_ANDROID_BINDER_IPC_32BIT
This config for 32bit LP 5.0 support.

Change-Id: Ie9ff96126f0ae36397fc39e272220b57a6ab8a69
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2679,7 +2679,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-# CONFIG_ANDROID_BINDER_IPC_32BIT is not set
+CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -2910,6 +2910,7 @@ CONFIG_MRVL_SKMALLOC=y
 CONFIG_SKMALLOC_REBOOT_NOTIFY=y
 CONFIG_MRVL_SKMALLOC_WIRELESS_EN=y
 CONFIG_MRVL_MMP_MODEM=y
+# CONFIG_SSIPC_SUPPORT is not set
 CONFIG_MRVL_MMP_CM3=y
 CONFIG_MRVL_RSV_PAGE=y
 
