--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1028,6 +1028,7 @@ config SENSORS_PCF8591
 source drivers/hwmon/pmbus/Kconfig
 source drivers/hwmon/bmi160/Kconfig
 source drivers/hwmon/bme280/Kconfig
+source drivers/hwmon/bmp280/Kconfig
 
 config SENSORS_SHT15
 	tristate "Sensiron humidity and temperature sensors. SHT15 and compat."
