arm64: configs: enable bmp280 pressure sensor
This patch enables bmp280 pressure sensor used in pxa1936ff platform

Change-Id: I3c8744f673973679ef5e3116257e744387ff485d
Signed-off-by: Ohad Sharabi <sohad@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1713,6 +1713,8 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_BMI160 is not set
 CONFIG_SENSORS_BME280=y
 CONFIG_SENSORS_BME280_I2C=y
+CONFIG_SENSORS_BMP280=y
+CONFIG_SENSORS_BMP280_I2C=y
 # CONFIG_SENSORS_SHT15 is not set
 # CONFIG_SENSORS_SHT21 is not set
 # CONFIG_SENSORS_SMM665 is not set
