arm64: dts: reduce buck1a sleep mode voltage for pxa1936_dkb_v1
to save more power, need to reduce buck1a(vcc_main) voltage
to 0.7v in sleep mode. we have confirmed that 0.7v is fine
for SoC in sleep mode.

Change-Id: I0821ff9a4ad80edb224f69d0713b36ac3246822d
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
@@ -17,7 +17,11 @@
 			      <0x1 0x5d 0xff 0x0>,
 			      <0x1 0x5e 0xfc 0x0>,
 			      <0x1 0x5f 0x0f 0x0>,
-			      <0x1 0x60 0xf3 0x0>;
+			      <0x1 0x60 0xf3 0x0>,
+			      /* enable buck1a sleep mode */
+			      <0x1 0x5a 0x03 0x02>,
+			      /* set buck1a sleep voltage to 0.7v */
+			      <0x1 0x30 0x7f 0x08>;
 
 	regulators {
 		buck1a: BUCK1A {regulator-boot-on;regulator-always-on;};
