--- a/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
@@ -14,7 +14,11 @@
 	 * use value directly, not use macro
 	 * <page reg-addr mask value>
 	 */
-	marvell,pmic-bd-cfg = <>;
+	marvell,pmic-bd-cfg =
+		/* enable buck1a sleep mode */
+		<0x4 0x24 0x30 0x20>,
+		/* set buck1a sleep voltage to 0.7v */
+		<0x4 0x26 0x7f 0x08>;
 
 	/* ---buck--- */
 	vccmain: regulator-buck1a {
