--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -357,6 +357,27 @@
 			imx219: sensor@3 {
 				status = "disabled";
 			};
+
+			OV13850R2A: sensor@4 {
+				compatible = "ovt,ov13850r2a";
+				status = "okay";
+				reg = <0x10>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <24000000>;
+				dphy3 = <0xff4116>;
+				dphy5 = <0x247ff>;
+				dphy6 = <0x4001001>;
+				af_2v8-supply = <&ldo8>;
+				avdd_2v8-supply = <&ldo7>;
+				dovdd_1v8-supply = <&buck2>;
+				dvdd_1v2-supply = <&buck3>;
+				pwdn-gpios = <&gpio CAM_MAIN_PWDN_N 1>;
+				reset-gpios = <&gpio CAM1_RST_N 1>;
+			};
 		};
 	};
 
