--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -122,6 +122,20 @@
 		rst_gpio = <&gpio 98 0>;
 		avdd-supply = <&ldo10>;
 	};
+
+	mmp_m3_1: apsenhb {
+		pmicver = <1>;
+		vm3pwr-supply = <&ldo3>;
+		antpwr-supply = <&ldo9>;
+	};
+
+	mmp_m3_2: cm3senhb {
+		pmicver = <1>;
+		vm3pwr-supply = <&ldo3>;
+		antpwr-supply = <&ldo9>;
+		senpwr-supply = <&ldo18>;
+	};
+
 	mcam0:mcam@0 {
 		sc2-i2c-dyn-ctrl;
 		pwdn-gpios = <&gpio 68 0>;
