--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -85,6 +85,20 @@
 		rst_gpio = <&gpio 98 0>;
 		avdd-supply = <&ldo6>;
 	};
+
+	mmp_m3_1: apsenhb {
+		pmicver = <2>;
+		vm3pwr-supply = <&ldo3>;
+		antpwr-supply = <&ldo4>;
+	};
+
+	mmp_m3_2: cm3senhb {
+		pmicver = <2>;
+		vm3pwr-supply = <&ldo3>;
+		antpwr-supply = <&ldo4>;
+		senpwr-supply = <&ldo16>;
+	};
+
 	mcam0:mcam@0 {
 		sc2-i2c-dyn-ctrl;
 		pwdn-gpios = <&gpio 68 0>;
