--- a/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_ff.dtsi
@@ -14,7 +14,9 @@
 	 * use value directly, not use macro
 	 * <page reg-addr mask value>
 	 */
-	marvell,pmic-bd-cfg = <0x0 0x30 0xff 0xe8>;	  /* set GPIO0 as 32K & GPIO1 for reset */
+	marvell,pmic-bd-cfg = <0x0 0x30 0xff 0xe8>,	/* set GPIO0 as 32K & GPIO1 for reset */
+				<0x4 0x24 0x30 0x20>,	/* enable buck1a sleep mode */
+				<0x4 0x26 0x7f 0x08>;	/* set buck1a sleep voltage to 0.7v */
 
 	/* using lables, so no need for nesting */
 	/* ---buck--- */
