--- a/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm880_pxa1936_dkb.dtsi
@@ -18,7 +18,22 @@
 		/* enable buck1a sleep mode */
 		<0x4 0x24 0x30 0x20>,
 		/* set buck1a sleep voltage to 0.7v */
-		<0x4 0x26 0x7f 0x08>;
+		<0x4 0x26 0x7f 0x08>,
+		/* disable ldo 3, 5 ~ 14, 16 ~ 18 */
+		<0x1 0x2d 0x30 0x00>,
+		<0x1 0x39 0x30 0x00>,
+		<0x1 0x3f 0x30 0x00>,
+		<0x1 0x45 0x30 0x00>,
+		<0x1 0x4b 0x30 0x00>,
+		<0x1 0x51 0x30 0x00>,
+		<0x1 0x57 0x30 0x00>,
+		<0x1 0x5d 0x30 0x00>,
+		<0x1 0x63 0x30 0x00>,
+		<0x1 0x69 0x30 0x00>,
+		<0x1 0x6f 0x30 0x00>,
+		<0x1 0x7b 0x30 0x00>,
+		<0x1 0x81 0x30 0x00>,
+		<0x1 0x87 0x30 0x00>;
 
 	/* ---buck--- */
 	vccmain: regulator-buck1a {
