arm64: dts: modify properties of pxa1936 platforms
This patch fix model property as well as compatible property for pxa1936
platforms

Change-Id: I5eecddefee3e3cd9907ba59cfc8baeba2be56e4f
Signed-off-by: Ohad Sharabi <sohad@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v10.dts
@@ -11,6 +11,7 @@
 #include "pxa1936-board-common.dtsi"
 
 / {
+	model = "Marvell PXA1936 DKB V10 Development Board";
 	compatible = "marvell,pxa1936-dkb", "marvell,pxa1936";
 	soc {
 		apb@d4000000 {
