--- a/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb-v20.dts
@@ -11,6 +11,7 @@
 #include "pxa1936-board-common.dtsi"
 
 / {
+	model = "Marvell PXA1936 DKB V20 Development Board";
 	compatible = "marvell,pxa1936-dkb", "marvell,pxa1936";
 	soc {
 		apb@d4000000 {
