arm64: pxa1936_defconfig: add led timer trigger
we need this trigger for RGB led function to support
led breath light feature

Change-Id: I1ac94cc8d6d43a05707d9638b95556bb359579e1
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2525,7 +2525,7 @@ CONFIG_LEDS_88PM828X=y
 # LED Triggers
 #
 CONFIG_LEDS_TRIGGERS=y
-# CONFIG_LEDS_TRIGGER_TIMER is not set
+CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_LEDS_TRIGGER_ONESHOT is not set
 # CONFIG_LEDS_TRIGGER_HEARTBEAT is not set
 # CONFIG_LEDS_TRIGGER_BACKLIGHT is not set
