arm64: pxa1936 dts: add bmp280 to dts
- added the bmp280 to the pxa1936-ff dts with sensor8 label
- the bmp280 resides under twsi3

Change-Id: I6134df29ead3eefb655a6d08d8b82660ad7de428
Signed-off-by: Yoav Gvili <ygvili@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-ff.dts
+++ b/arch/arm64/boot/dts/pxa1936-ff.dts
@@ -161,6 +161,12 @@
 			};
 
 			twsi3: i2c@d4013800 {
+				sensor8: bmp280@76 {
+					compatible = "bosch-sensortec,bmp280";
+					reg = <0x76>;
+					avdd-supply = <&ldo16>;
+					status = "okay";
+				};
 				sensor7: apds990x@39 {
 					pinctrl-names = "default"; pinctrl-0 = <&apds990x_pins>;
 					compatible = "avago,apds990x";
