arm64: defconfig: enable apds990x to pxa1936_defconfig
enable the apds990x compilation
this allows using the apds990x in the device

Change-Id: I8c75aef72f2fc55398ef95197619e5718c7c5b21
Signed-off-by: Yoav Gvili <ygvili@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1751,7 +1751,7 @@ CONFIG_SENSORS_MMX3524X_MXC400X=y
 # CONFIG_SENSORS_LPS331AP is not set
 # CONFIG_SENSORS_BMP18X is not set
 CONFIG_SENSORS_APDS9930=y
-# CONFIG_SENSORS_APDS990X_MRVL is not set
+CONFIG_SENSORS_APDS990X_MRVL=y
 # CONFIG_SENSORS_GRIP is not set
 # CONFIG_SENSORS_STK3X1X is not set
 # CONFIG_SENSORS_LIS3DH is not set
