arm64: dts: add dsi_avdd regulator to mmp dsi driver
This patch assigns buck3 to mmp dsi device.
It is done in order to let dsi driver reduce constraints on regulator in
various power states of the device.

Change-Id: I53f63ade6636cc6da83e0bcb8398096cb10a7493
Signed-off-by: Ohad Sharabi <sohad@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -132,6 +132,7 @@
 				marvell,dsi-lanes = <4>;
 				marvell,burst-mode = <2>;
 				marvell,hbp-en;
+				dsi_avdd-supply = <&buck3>;
 				status = "okay";
 			};
 
