drivers: cpuidle: Enable cpuidle in armv8 arch32 mode
There are several software differences compared to armv8 arch64 when enable
cpuidle in arch32:
1. cpu_suspend in arm/ is implemented differently as that in arm64. Need to
call mcpm_powerdown_finisher function explictly in cpu_suspend;
2. Use mcpm_plat_power_register to register cpuidle power states;
3. arm/ provides arm_cpuidle_simple_enter by open source, no need to implement
cpu_simple_enter.
4. arch32/64 uses different smc/svc functions.
5. Need to explictly set mcpm ops in arch32.

Change-Id: I49fb30359fcb40e232147117d5ae3c25b47d3347
Signed-off-by: Fangsuo Wu <fswu@marvell.com>

--- a/arch/arm/mach-mmp/Makefile
+++ b/arch/arm/mach-mmp/Makefile
@@ -39,7 +39,7 @@ obj-$(CONFIG_MACH_MMP_DT)	+= mmp-dt.o
 obj-$(CONFIG_MACH_MMP2_DT)	+= mmp2-dt.o
 obj-$(CONFIG_MACH_MMPX_DT)	+= mmpx-dt.o regs-addr.o v7_pm_setup.o mmp_cpuidle.o reset.o platsmp.o pxa988_lowpower.o restart.o
 
-obj-$(CONFIG_MACH_HELANX_DT)	+= $(ARM64)/helanx-dt.o $(ARM64)/regs-addr.o $(ARM64)/pm-pxa1908.o $(ARM64)/soc_camera_dkb.o $(ARM64)/cpuidle_qos.o
+obj-$(CONFIG_MACH_HELANX_DT)	+= $(ARM64)/helanx-dt.o $(ARM64)/regs-addr.o $(ARM64)/soc_camera_dkb.o $(ARM64)/cpuidle_qos.o $(ARM64)/pm-pxa1908.o $(ARM64)/pxa1908_lowpower.o $(ARM64)/../mcpm/mcpm_plat.o
 
 ifeq ($(CONFIG_SUSPEND),y)
 obj-$(CONFIG_ARCH_MMP)		+= pm.o pm-pxa1L88.o
