arm: pxa1978: add support for pxa1978
Adding support for pxa1978 (SB/NB), NB side (Bowie).
The physical memory map and the layout of xPMU/CCU
are much different from pxa1U88/1L88, therefore
re-using only part of the functionality available
in mmpx-dt machines and adding a new one:
CONFIG_MACH_PXA1978_DT

Status: kernel full boot up to prompt with 4 CPU's on QT.

Change-Id: Ibfb9d43b078c4817a6ec466c79b69f4267c268ee
Signed-off-by: Anton Eidelman <antone@marvell.com>

--- a/arch/arm/mach-mmp/Kconfig
+++ b/arch/arm/mach-mmp/Kconfig
@@ -131,6 +131,19 @@ config MACH_HELANX_DT
 	help
 	  Include support for Marvell MMP2 based platforms using
 	  the device tree. It targets at pxa1908  and etc.
+
+config MACH_PXA1978_DT
+	bool "Support PXA1978 (SBNB) with device tree"
+	depends on !CPU_MOHAWK && !CPU_PJ4
+	select CPU_PXA988
+	select USE_OF
+	select PINCTRL
+	select PINCTRL_SINGLE
+	help
+	  Include support for PXA1978 (SBNB) platforms using
+	  the device tree. This SoC has Marvell Whitney ARMv7
+	  core. PXA988 is selected for compatibility.
+
 endmenu
 
 config CPU_PXA168
